--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
 	<div id="container">
 		<div id="result-container">
-			<h1 id="encrypted-info"></h1>
+			<p id="encrypted-info"></p>
 			<p id="result"><span id="encrypted-info2"></span><strong id="demo" class="glow" ></strong></p>
 	    </div>
 	</div>
