--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 }
 @-webkit-keyframes glow {
   from {
-    text-shadow: 0 0 4px #fff, 0 0 8px #fff, 0 0 12px #e60073, 0 0 16px #e60073, 0 0 20px #e60073, 0 0 24px #e60073, 0 0 28px #e60073;
+    text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #e60073, 0 0 8px #e60073, 0 0 10px #e60073, 0 0 12px #e60073, 0 0 14px #e60073;
   }
   to {
-    text-shadow: 0 0 8px #fff, 0 0 12px #ff4da6, 0 0 16px #ff4da6, 0 0 20px #ff4da6, 0 0 24px #ff4da6, 0 0 28px #ff4da6, 0 0 32px #ff4da6;
+    text-shadow: 0 0 4px #fff, 0 0 6px #ff4da6, 0 0 8px #ff4da6, 0 0 10px #ff4da6, 0 0 12px #ff4da6, 0 0 14px #ff4da6, 0 0 16px #ff4da6;
   }
 }
     </style>
@@ -60,7 +60,7 @@
 <body>
 	<div id="container">
 		<div id="result-container">
-			<p id="encrypted-info"></p>
+			<strong id="encrypted-info"></strong>
 			<p id="result"><span id="encrypted-info2"></span><strong id="demo" class="glow" ></strong></p>
 	    </div>
 	</div>
